[package]
name = "simple_tmp_logger"
version = "1.2.3"
edition = "2021"
authors = ["Darrion Whitfield <dwhitfield@ramfield.net>"]
description = "A really simple application to write files to a log in the /tmp dir"
homepage = "https://docs.artisanhosting.net"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
time = "0.2.23"
dusa_collection_utils = "2.3.2"